# pcre2.lua

./: CMakeLists.txt  Doxyfile  LICENSE  README.md
.github/workflows/: unix_lua51.yml  unix_lua52.yml  unix_lua53.yml  unix_lua54.yml
include/: lua_pcre2.h  pcre2.lua.h
src/: lua_pcre2.c  pcre2.lua.c
test/: CMakeLists.txt  test.h
test/case/: compile.c  luaopen.c  match.c  substitute.c
